--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-wheel-scrollview-picker",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "A pure js picker for React Native",
   "main": "index.tsx",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rheng001/react-native-wheel-scrollview-picker.git"
+    "url": "git+https://github.com/nixidee/react-native-wheel-scrollview-picker.git"
   },
   "keywords": [
     "picker",
@@ -17,12 +17,12 @@
     "react-native",
     "react-native-picker"
   ],
-  "author": "rheng001",
+  "author": "nixidee",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rheng001/react-native-wheel-scrollview-picker/issues"
+    "url": "https://github.com/nixidee/react-native-wheel-scrollview-picker/issues"
   },
-  "homepage": "https://github.com/rheng001/react-native-wheel-scrollview-picker#readme",
+  "homepage": "https://github.com/nixidee/react-native-wheel-scrollview-picker#readme",
   "peerDependencies": {
     "@types/react": "*",
     "@types/react-native": "*",
@@ -31,11 +31,11 @@
     "typescript": "*"
   },
   "devDependencies": {
-    "@types/react": "^17.0.15",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.64.12",
-    "react": "^17.0.2",
-    "react-native": "^0.64.2",
-    "typescript": "^4.3.5"
+    "react": "^19.1.0",
+    "react-native": "^0.81.5",
+    "typescript": "^5.9.2"
   },
   "types": "index.d.ts"
 }
